# polyrandom

./: .gitignore  polyrandom.cabal
Random/: Class.hs  PRNG.hs  Variate.hs
